# Prism

./: .gitignore  .gitmodules  CMakeLists.txt
3rdlibs/: CMakeLists.txt
3rdlibs/glfw/: CMakeLists.txt
3rdlibs/imgui/: CMakeLists.txt  imgui_demo.cpp
include/: renderer.hpp  ui.hpp
include/anim/: anim.hpp  anim_manager.hpp  anim_timer.hpp
include/config/: config.hpp
include/engine/: application.hpp  core.hpp  layer.hpp  layer_stack.hpp  log.hpp  prism.hpp  renderer.hpp  ui.hpp  window.hpp
include/engine/event/: application_event.hpp  event.hpp  key_event.hpp  mouse_event.hpp
include/engine/imgui/: imgui_layer.hpp
include/geo/: geo.hpp  geometry.hpp  skybox.hpp
include/render/: camera.hpp  drawable.hpp  drawable_manager.hpp  error.hpp  geo.hpp  index_buffer.hpp  mesh.hpp  model.hpp  shader.hpp  shader_manager.hpp  shader_program.hpp  texture.hpp  texture_manger.hpp  vertex_array.hpp  vertex_buffer.hpp
include/scene/: interface.hpp  scene.hpp
include/tools/: glsl_loader.hpp
resources/model/monkey/: untitled.mtl
resources/shader/: axis_frag.glsl  axis_vertex.glsl  color_frag.glsl  color_vertex.glsl  frag.glsl  mesh_frag.glsl  mesh_vertex.glsl  plane_frag.glsl  plane_vertex.glsl  pure_frag.glsl  pure_vertex.glsl  sky_frag.glsl  sky_vertex.glsl  vertex.glsl  with_tex_frag.glsl  with_tex_vertex.glsl
sandbox/: CMakeLists.txt  application.cpp  prism.cpp  render_object.hpp  startup.hpp  ticker.hpp
sandbox/geo/: geo.hpp
sandbox/src/: animation_timer.hpp  application.cpp  chase.hpp  config.hpp  move.hpp  particle.hpp  player.hpp  render.hpp  render_info.hpp  render_layer.hpp  sanbox.cpp  sandbox.cpp  setup.hpp  signal.hpp  systems.hpp  ticker.hpp
src/: application.cpp  main.cpp  renderer.cpp  ui.cpp
src/anim/: anim.cpp  anim_manager.cpp  anim_timer.cpp
src/config/: config.cpp
src/engine/: application.cpp  layer.cpp  layer_stack.cpp  log.cpp  renderer.cpp  ui.cpp  window.cpp
src/engine/imgui/: imgui_layer.cpp
src/geo/: geometry.cpp  skybox.cpp
src/render/: camera.cpp  drawable_manager.cpp  index_buffer.cpp  mesh.cpp  model.cpp  shader.cpp  shader_manager.cpp  texture.cpp  texture_manager.cpp  vertex_array.cpp  vertex_buffer.cpp
